--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </form>
     </section>
     <footer>
-      <h1>Copyright&copy;2020 | made with ❤️ by <span>atom_24</span></h1>
+      <h1>Copyright&copy;2020 | made with ❤️ by <span>palankit</span></h1>
     </footer>
     <!-----------x---------- Contact -----------x----------->
 
