--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!---------------------- Contact ----------------------->
 
     <section class="contact-wrapper" id="contact">
-      <h2>Contact Us</h2>
+      <h2>Contact Me</h2>
       <form action="" class="contact-from">
         <input
           type="text"
@@ -113,7 +113,7 @@
       </form>
     </section>
     <footer>
-      <h1>Copyright&copy;2020 | made with ❤️ by <span>palankit</span></h1>
+       <span>Created By <a href="https://www.linkedin.com/in/ankit-kumar-pal-bb9a1b191">atom_24</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
     <!-----------x---------- Contact -----------x----------->
 
